fix nonBinding handling